# haskell-beginners-projects

./: README.md
memegen/: .gitignore  LICENSE  README.md  memegen.cabal  stack.yaml
memegen/app/: Main.hs
memegen/codelab/: memegen_codelab.md
memegen/resources/: upload.html
memegen/src/: App.hs  Db.hs  Img.hs  Lib.hs
memegen/src/Memegen/: App.hs  Db.hs  Img.hs  Lib.hs
webwatch/: .gitignore  LICENSE  README.md  deploy.sh  stack.yaml  webwatch.cabal  webwatch.conf  webwatch.service
webwatch/codelab/: webwatch_codelab.md
webwatch/src/: Main.hs
webwatch/src/WebWatch/: GetLinks.hs  Mailer.hs  Slack.hs
