Name:                webwatch
Version:             0.1.0.0
Synopsis:            ZuriHac beginner project: web watch
Description:         ZuriHac beginner project: web watch
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Category:            Network
Build-type:          Simple
Extra-source-files:  ChangeLog.md
Cabal-version:       >=1.10

Executable webwatch
  Main-is:             Main.hs
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Ghc-options:         -Wall

  Other-modules:
    WebWatch.GetLinks
    WebWatch.Mailer

  Build-depends:
    amazonka             >=1.4  && <1.5,
    amazonka-ses         >=1.4  && <1.5,
    base                 >=4.9  && <4.10,
    configurator         >=0.3  && <0.4,
    http-conduit         >=2.1  && <2.2,
    lens                 >=4.14 && <4.15,
    mtl                  >=2.2  && <2.3,
    network-uri          >=2.6  && <2.7,
    tagsoup              >=0.13 && <0.14,
    text                 >=1.2  && <1.3,
    unordered-containers >=0.2  && <0.3
