Name:                webwatch
Version:             0.1.0.0
Synopsis:            ZuriHac beginner project: web watch
Description:         ZuriHac beginner project: web watch
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Category:            Network
Build-type:          Simple
Extra-source-files:  ChangeLog.md
Cabal-version:       >=1.10

Executable webwatch
  Main-is:             Main.hs
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Ghc-options:         -Wall

  Other-modules:
    WebWatch.GetLinks
    WebWatch.Mailer

  Build-depends:
      amazonka
    , amazonka-ses
    , base
    , configurator
    , http-conduit
    , lens
    , mtl
    , network-uri
    , tagsoup
    , text
    , unordered-containers
